# Cloud-Renderer

./: .gitignore  .travis.yml  CMakeLists.txt  Clouds.filters  Clouds.sln  Clouds.vcxproj  LICENSE  README.md
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
paper/tex/: conetracing.tex  implementation.tex  noise.tex
papers/: run.sh
papers/tex/: abstract.tex  conetracing.tex  implementation.tex  intro.tex  main.tex  noise.tex  references.tex  results.tex  run.sh  voxelization.tex
res/: billboard_vert.glsl  billboard_vert_instanced.glsl  cloud_frag.glsl  cloud_vert.glsl  conetrace_frag.glsl  debug_frag.glsl  diffuse_frag.glsl  diffuse_vert.glsl  first_voxelize.glsl  light_frag.glsl  light_vert.glsl  point_frag.glsl  point_vert.glsl  second_voxelize.glsl  sun_frag.glsl  voxel_frag.glsl  voxel_vert.glsl  voxelize_frag.glsl  voxelize_vert.glsl
src/: Camera.cpp  Camera.hpp  Cloud.cpp  Cloud.hpp  CloudVolume.cpp  CloudVolume.hpp  GLSL.hpp  Keyboard.hpp  Library.hpp  Light.hpp  Mesh.cpp  Mesh.hpp  Mouse.hpp  Shader.cpp  Shader.hpp  Spatial.hpp  Sun.hpp  Texture.cpp  Texture.hpp  Util.hpp  Volume.cpp  Volume.hpp  Window.cpp  Window.hpp  imgui.ini  lab anim.vcxproj  lab anim.vcxproj.filters  main.cpp
src/GL/: Shader.hpp
src/IO/: Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  Window.cpp  Window.hpp
src/Model/: Mesh.cpp  Texture.cpp  Texture.hpp
src/Shaders/: BillboardShader.cpp  BillboardShader.hpp  ConeTraceShader.cpp  ConeTraceShader.hpp  DiffuseShader.cpp  DiffuseShader.hpp  GLSL.cpp  GLSL.hpp  LightDepthShader.cpp  LightDepthShader.hpp  LightMapWriteShader.cpp  LightMapWriteShader.hpp  LightPosShader.cpp  LightPosShader.hpp  LightShader.cpp  LightShader.hpp  PointShader.cpp  PointShader.hpp  Shader.cpp  Shader.hpp  SunShader.cpp  SunShader.hpp  VolumeShader.cpp  VolumeShader.hpp  VoxelShader.cpp  VoxelShader.hpp  VoxelizeShader.cpp  VoxelizeShader.hpp
